--- a/landstats/package.json
+++ b/landstats/package.json
@@ -9,13 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@mapbox/mapbox-gl-geocoder": "^5.0.2",
-    "@turf/turf": "^6.5.0",
-    "d3-fetch": "^3.0.1",
-    "mapbox-gl": "^3.3.0",
-    "next": "14.2.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "next": "14.2.3"
   },
   "devDependencies": {
     "eslint": "^8",
