--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
     "@turf/turf": "^6.5.0",
     "d3-fetch": "^3.0.1",
     "mapbox-gl": "^3.3.0",
-    "next": "14.2.3",
+    "next": "14.0.3",
     "react": "^18",
     "react-dom": "^18"
   },
   "devDependencies": {
     "eslint": "^8",
-    "eslint-config-next": "14.2.3"
+    "eslint-config-next": "14.0.3"
+  },
+  "engines": {
+    "node": "18.20"
   }
 }
