--- a/process-data/package.json
+++ b/process-data/package.json
@@ -1,4 +1,12 @@
 {
+  "name": "landstats-process-data",
+  "version": "1.0.0",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "",
+  "license": "ISC",
+  "description": "",
   "dependencies": {
     "@turf/turf": "^6.5.0"
   },
