--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@mapbox/mapbox-gl-geocoder": "^5.0.2",
-    "@turf/turf": "^6.5.0",
+    "@mapbox/mapbox-gl-geocoder": "^5.0",
+    "@turf/turf": "^6.5",
     "d3-fetch": "^3.0.1",
-    "mapbox-gl": "^3.3.0",
+    "mapbox-gl": "^3.4",
     "next": "14.2.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "us-atlas": "^3.0.1"
   },
   "devDependencies": {
     "eslint": "^8",
