--- a/process-data/package.json
+++ b/process-data/package.json
@@ -8,7 +8,8 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "@turf/turf": "^6.5.0"
+    "@turf/turf": "^6.5.0",
+    "axios": "^1.7.7"
   },
   "type": "module"
 }
