--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
+    "swr": "^2.2.5",
     "us-atlas": "^3.0.1"
   },
   "devDependencies": {
