--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "d3-fetch": "^3.0.1",
     "lucide-react": "^0.468.0",
     "mapbox-gl": "^3.8",
+    "mitt": "^3.0.1",
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
